$Id: ChangeLog,v 1.10 2002-12-02 20:36:11 varuttam Exp $
	
Version 2.6.???
	
BUGS FIXED
	* Change parameter passed to Result::write so that uservol is 
	  correctly processed [AV] (09/18/2002)	
	* Util/input.C:tokentype() - token conversion to lower case only
	  changed first character [AV] (08/13/2002)
        * Command-line argument handling: when extra argument expected (-v, -t)
	  for last option but not given, casuses SEGFAULT (core dump).  Check
	  for last command-line option and error. [AV] (09/09/2002)
	

NEW FEATURES
	* Direct reading of RTFLUX by ALARA [MF] (08/23/02)
	* Read user-defined total volume in 'loading' input block. [AV] (09/09/2002)
	* Use user-defined total volume with special 'units' entry of
	  output block to give volume integrated results. [AV] (09/09/2002)
        * Adjoint dose calculation for volume resolution [AV] (12/02/2002)

CODE UPDATES
	* Update for addition of software for producing collaboration 
	  graphs in doxygen called 'dot'  [PW] (08/11/2002)
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.6.0
	
* Start of ChangeLog (08/08/2002)

BUGS FIXED


NEW FEATURES
	* Squeeze multiple zeros out of ALARALib [PW] (08/09/2002) 
	  THIS WILL REQUIRE CHANGE IN MINOR REVISION NUMBER


CODE UPDATES
	* All class comments converted to Doxygen compliance
	* Added target to Makefile to make documentation with Doxygen
	* Improved C++ ISO standards compliance
	  - use correct headers
	  - completely specify entities from std namespace
	  - import various stream entities from std namespace
	* Added ChangeLog and TODO files
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.5.3

BUGS FIXED
	* ASCII IEAF library was not being read properly - missing extra
	  line at end of each isotope's data

NEW FEATURES
	* NONE

CODE UPDATES
	* NONE
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 

Version 2.5.2

BUGS FIXED
	* Atomic X-ray data was not being included in gamma library when