@@ -1,4 +1,4 @@
-$Id: AUTHORS,v 1.1 2003-01-03 02:04:39 wilsonp Exp $
+$Id: AUTHORS,v 1.2 2003-01-06 20:58:59 wilsonp Exp $
 
 Primary Developer
 -------------------
@@ -14,7 +14,6 @@ wilsonp@engr.wisc.edu
 Other Developers
 -------------------
 UW-Madison
-	* Phiphat Phruksarojanakun, PhD Student (NEEP)
 	* Athi Varuttamaseni, PhD Student (NEEP)
 	* Milad Fatenejad, Undergraduate (NE)
 	* Yuan-fen Eric Kuo, Undergraduate (CS)
