@@ -1,4 +1,4 @@
-$Id: TODO,v 1.11 2002-12-27 03:40:27 wilsonp Exp $
+$Id: TODO,v 1.12 2003-01-06 20:58:59 wilsonp Exp $
 
 When claiming a task from this list, please immediately place your
 name beside it, change the date from the date that it was added to
@@ -31,8 +31,7 @@ NEW FEATURES
 
 CODE FEATURES
 ------------------
-**** (08/08/2002) Improve comments under doxygen
-[EK] (08/08/2002) Improve build instructions, either in new file or Makefile - or autotools
+[PW] (08/08/2002) Improve comments under doxygen
 
 
 USER DOCUMENTATION
